update client-side module to shared.js

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,6 +7,6 @@
   <body>
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
-    <script src="/javascripts/index.js"></script>
+    <script src="/javascripts/shared.js"></script>
   </body>
 </html>
