setup the bones of the project

--- a/views/input.ejs
+++ b/views/input.ejs
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
   <%- include('partials/head') %>
-  <link rel='stylesheet' href='/stylesheets/index.css' />
   <body>
     <%- include('partials/navbar') %>
     <div class="main-container">
-      <h1 class="title">Welcome to the Internship Qualifier</h1>
+      <h1 class="title">Input User Info Here</h1>
     </div>
     <%- include('partials/footer') %>
   </body>
