--- a/public/stylesheets/global.css
+++ b/public/stylesheets/global.css
@@ -5,7 +5,8 @@ body {
 }
 
 h1.title {
-  margin-top: 80px;
+  margin-top: 60px;
+  margin-bottom: 40px;
 }
 
 html {
@@ -14,6 +15,7 @@ html {
 }
 
 .main-container {
+  font-size: 20px;
   padding: 0px 100px;
   margin-top: 30px;
   text-align: center;
