add example table to the views/qualified.ejs template

--- a/views/qualified.ejs
+++ b/views/qualified.ejs
@@ -1,10 +1,28 @@
 <!DOCTYPE html>
 <html>
   <%- include('partials/head') %>
+  <link rel='stylesheet' href='/stylesheets/qualified.css' />
   <body>
     <%- include('partials/navbar') %>
     <div class="main-container">
       <h1 class="title">Qualified Students</h1>
+      <table class="students">
+        <tr>
+          <th class="students">Last Name</th>
+          <th class="students">First Name</th>
+          <th class="students partial-gpa">Partial GPA</th>
+        </tr>
+        <tr>
+          <td class="students">Crackcorn</td>
+          <td class="students">Jimmy</td>
+          <td class="students partial-gpa">3.8</td>
+        </tr>
+        <tr>
+          <td class="students">Franklin</td>
+          <td class="students">Benny</td>
+          <td class="students partial-gpa">3.9</td>
+        </tr>
+      </table>
     </div>
     <%- include('partials/footer') %>
   </body>
