--- a/views/qualified.ejs
+++ b/views/qualified.ejs
@@ -6,6 +6,7 @@
     <%- include('partials/navbar') %>
     <div class="main-container">
       <h1 class="title">Qualified Students</h1>
+      <p>Displaying 2 out of 5 students who qualified:</p>
       <table class="students">
         <tr>
           <th class="students">Last Name</th>
