--- a/public/stylesheets/input.css
+++ b/public/stylesheets/input.css
@@ -26,6 +26,23 @@ div.course select {
   height: 40px;
 }
 
+div.input-success {
+  background-color: #d3f8d3;
+  border: 2px solid green;
+  border-radius: 15px;
+  font-size: 16px;
+  height: 60px;
+  margin-bottom: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 5px;
+  width: 600px;
+}
+
+div.input-success p {
+  margin: 0;
+}
+
 div.name {
   display: flex;
   height: 40px;
