add user input validation to the /input endpoint

--- a/views/input.ejs
+++ b/views/input.ejs
@@ -6,7 +6,7 @@
     <%- include('partials/navbar') %>
     <div class="main-container">
       <h1 class="title">Student Record Input</h1>
-      <% console.log(locals.partialGPA) %>
+
       <% if (locals.partialGPA) { %>
         <div class="input-success">
           <p>Successfully input record:</p>
@@ -14,27 +14,39 @@
           <p>Partial GPA - <%= partialGPA %></p>
         </div>
       <% } %>
+
       <form class="student" action="/input" method="POST">
-        <div class="name">
+        <div class="name <% if (locals.errors && locals.errors.lastName) { %> error<% } %>">
           <label for="lastName">Last Name</label><br>
-          <input type="text" id="lastName" name="lastName"><br>
+          <input type="text" id="lastName" name="lastName" <% if (locals.student && !locals.partialGPA ) { %>value="<%= student.lastName %>"<% } %><br>
         </div>
-        <div class="name">
+        <% if (locals.errors && locals.errors.lastName) { %>
+          <p class="error-message"><%= locals.errors.lastName %></p>
+        <% } %>
+        <div class="name <% if (locals.errors && locals.errors.firstName) { %> error<% } %>">
           <label for="firstName">First Name</label><br>
-          <input type="text" id="firstName" name="firstName"><br>
+          <input type="text" id="firstName" name="firstName" <% if (locals.student && !locals.partialGPA ) { %>value="<%= student.firstName %>"><% } %><br>
         </div>
+        <% if (locals.errors && locals.errors.firstName) { %>
+          <p class="error-message"><%= locals.errors.firstName %></p>
+        <% } %>
 
         <div class="grades">
           <% for (const course in courses) { %>
-            <div class="course">
+            <div class="course <% if (locals.errors && locals.errors[`courseGrades.${course}`]) { %> error<% } %>">
               <label for="<%= course %>"><%= courses[course] %></label><br>
               <select name="<%= course %>" id="<%= course %>">
-              <option disabled selected value> -- select an option -- </option>
+              <option disabled <% if (locals.partialGPA || !locals.student || (locals.student && student.courseGrades[course] === undefined)) { %> selected <% } %> value> -- select an option -- </option>
               <% for (const grade in gradeScale) { %>
-                <option class="grade" value="<%= grade %>"><%= grade %></option>
+                <option class="grade" <% if (!locals.partialGPA && (locals.student && student.courseGrades[course] === grade)) { %> selected <% } %> value="<%= grade %>"><%= grade %></option>
               <% } %>
               </select><br>
             </div>
+            <% console.log(locals.errors) %>
+            <% console.log(course) %>
+            <% if (locals.errors && locals.errors[`courseGrades.${course}`]) { %>
+              <p class="error-message"><%= locals.errors[`courseGrades.${course}`] %></p>
+            <% } %>
           <% } %>
         </div>
 
