--- a/public/stylesheets/input.css
+++ b/public/stylesheets/input.css
@@ -15,6 +15,10 @@ div.course {
   margin-bottom: 20px;
 }
 
+div.course.error {
+  margin-bottom: 5px;
+}
+
 div.course label {
   margin-right: 30px;
 }
@@ -50,6 +54,10 @@ div.name {
   margin-bottom: 30px;
 }
 
+div.name.error {
+  margin-bottom: 5px;
+}
+
 div.name input {
   color: #666666;
   font-size: 20px;
@@ -66,4 +74,10 @@ form.student {
   width: 600px;
   margin-right: auto;
   margin-left: auto;
+}
+
+p.error-message {
+  color: red;
+  font-size: 14px;
+  margin-top: 0px;
 }
