--- a/public/stylesheets/qualified.css
+++ b/public/stylesheets/qualified.css
@@ -6,6 +6,7 @@ div.main-container p {
 table.students {
   border: 5px solid #d3d3d3;
   border-collapse: collapse;
+  margin-bottom: 40px;
   margin-left: auto;
   margin-right: auto;
   table-layout: fixed;
