--- a/public/stylesheets/input.css
+++ b/public/stylesheets/input.css
@@ -50,7 +50,7 @@ div.input-success p {
 div.name {
   display: flex;
   height: 40px;
-  justify-content: space-evenly;
+  justify-content: start;
   margin-bottom: 30px;
 }
 
@@ -67,6 +67,8 @@ div.name input {
 label {
   display: inline-block;
   margin-bottom: auto;
+  margin-left: 30px;
+  margin-right: 20px;
   margin-top: auto;
 }
 
