--- a/public/stylesheets/input.css
+++ b/public/stylesheets/input.css
@@ -35,10 +35,10 @@ div.input-success {
   border: 2px solid green;
   border-radius: 15px;
   font-size: 16px;
-  height: 60px;
   margin-bottom: 20px;
   margin-left: auto;
   margin-right: auto;
+  min-height: 60px;
   padding-top: 5px;
   width: 600px;
 }
