--- a/public/stylesheets/input.css
+++ b/public/stylesheets/input.css
@@ -34,13 +34,14 @@ div.input-success {
   background-color: #d3f8d3;
   border: 2px solid green;
   border-radius: 15px;
+  display: inline-block;
   font-size: 16px;
   margin-bottom: 20px;
   margin-left: auto;
   margin-right: auto;
   min-height: 60px;
-  padding-top: 5px;
-  width: 600px;
+  padding: 5px 10px;
+  min-width: 600px;
 }
 
 div.input-success p {
