print out a fixed decimal for input and qualified students

--- a/views/qualified.ejs
+++ b/views/qualified.ejs
@@ -21,7 +21,7 @@
                   <tr>
                     <td class="students"><%= lastName %></td>
                     <td class="students"><%= firstName %></td>
-                    <td class="students partial-gpa"><%= partialGPA %></td>
+                    <td class="students partial-gpa"><%= partialGPA.toFixed(1) %></td>
                   </tr>
                 <% }) %>
               <% } %>
