--- a/views/input.ejs
+++ b/views/input.ejs
@@ -12,7 +12,7 @@
           <div class="input-success">
             <p>Successfully input record:</p>
             <p><%= student.firstName %> <%= student.lastName %></p>
-            <p>Partial GPA - <%= partialGPA %></p>
+            <p>Partial GPA - <%= partialGPA.toFixed(1) %></p>
           </div>
         <% } %>
 
